small alignment fixes for tools menu

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -894,18 +894,14 @@ iframe.container-frame {
 /* Otherwise the datepicker is confused when in a modal */
 .datepicker-dropdown {
     margin-top: 30px;
-
-/*#tools-menu {
-  width: 169px;
-  padding-left: 3px;
-}*/
+}
 
 #tools-menu > .panel > .panel-heading {
   height: auto;
   padding-left: 0px;
+  margin-left: 4px;
 }
 
 #sidebar-tools > li > a {
   padding-left: 20px;
 }
-
